--- a/src/assets/scss/components/_modal.scss
+++ b/src/assets/scss/components/_modal.scss
@@ -31,14 +31,25 @@
         z-index: 9;
     }
     &-close {
+        position: absolute;
+        top: 24px;
+        right: 20px;
         &__icon {
             position: absolute;
-            top: 0;
-            right: 0;
+            top: 20px;
+            right: 35px;
             bottom: -50px;
             z-index: 9;
             @media (max-width: 769px) {
-                    display: none;    
+                right: 16px;
+                top: 10px;
+            }
+            &.payment {
+                @media (max-width: 769px) {
+                    width: 20px;
+                    height: 20px;
+                    right: 35px;
+                }
             }
         }
     }
@@ -51,6 +62,13 @@
         transform: translate(-50%, -50%);
         z-index: -1;
         opacity: 0;
+        @media (max-width: 769px) {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            width: 100%;
+            height: 100%;
+        }
     }
     &-title {
         margin: 40px 0 10px;
@@ -67,15 +85,11 @@
         }
     
     }
-
     &-link {
         color: #000;
         text-decoration: none;
         margin-right: 5px;
     }
-    
-    
-    
     &__list {
         span {
             color: #0ABE3D;
@@ -88,17 +102,16 @@
         justify-content: center;
         align-items: center;
     }
-    &-close {
-        position: absolute;
-        top: 24px;
-        right: 20px;
-    }
+ 
 
     &-form {
         display: block;
         margin: 0 108px;
         margin-top: 26px;
         margin-bottom: 40px;
+        @media (max-width: 769px) {
+            margin: 15px 0;
+        }
     }
 
     &-input {
@@ -118,6 +131,18 @@
                 font-size: 18px;
                 padding-bottom: 3px;
                 margin-left: 0;
+                @media (max-width: 769px) {
+                    font-size: 15px;
+                    margin-bottom: 6px;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                }
+            }
+            img {
+                @media (max-width: 769px) {
+                    margin-left: 5px;
+                }
             }
             input {
                 width: 100%;
@@ -126,11 +151,19 @@
                 padding-bottom: 10px;
                 font-size: 16px;
                 outline: none ;
+                @media (max-width: 769px) {
+                    width: 80%;
+                    // padding-top: 5px;
+                }
+
             }
 
             &--center {
                 input {
                     width: 180px;
+                    @media (max-width: 769px) {
+                        width: 60%;
+                    }
                 }
             }
         }
@@ -141,14 +174,25 @@
             justify-content: space-around;
             align-items: center;
             margin: 0 45px;
+            @media (max-width: 769px) {
+                flex-direction: column;
+                margin-top: -20px;
+            }
             &__text {
                 display: flex;
                 align-items: center;
                 font-size: 22px;
+                @media (max-width: 769px) {
+                    margin-bottom: 25px;
+                }
                 span {
                     font-size: 35px;
                     font-weight: bold;
                     margin-left: 10px;
+                    @media (max-width: 769px) {
+                        margin-left: 0;
+                        font-size: 30px;
+                    }
                 }
             }
         }
