--- a/src/assets/scss/pages/calculator/_policyholder.scss
+++ b/src/assets/scss/pages/calculator/_policyholder.scss
@@ -106,6 +106,10 @@
             text-align: center;
             font-size: 12px;
             margin-top: 23px;
+            @media (max-width: 769px) {
+                font-size: 15px;
+                margin-top: 25px;
+            }
             span {
                 color: #0ABE3D;
             }
