--- a/src/assets/scss/pages/cabinet/_cabinet.scss
+++ b/src/assets/scss/pages/cabinet/_cabinet.scss
@@ -39,6 +39,7 @@
             a {
                 text-decoration: none;
                 color: #000;
+                margin-right: 25px;
             }
             img {
                 &:nth-child(2) {
@@ -69,9 +70,9 @@
                 border: 1px solid #fff;
                 box-shadow: 5px 5px 8px 5px #CEEDDC;
             }
-                    @media (max-width: 769px) { 
-                       width: 100%;
-                    }
+                @media (max-width: 769px) { 
+                    width: 100%;
+                }
         }
         &__btn {
         margin-bottom: 25px;
